# peerdup

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml  install.sh  start.sh  uninstall.sh
daemon/: .gitignore  Makefile  README.md  config.example.toml  pyproject.toml  setup.py  start.sh
daemon/cli/: peerdup.py
daemon/daemon/: config.py  daemon.py  identity.py  registry_pb2.py  registry_pb2_grpc.py
daemon/daemon/control/: servicer.py
daemon/daemon/lan/: discovery.py
daemon/daemon/registry/: client.py
daemon/daemon/relay/: client.py
daemon/daemon/state/: db.py
daemon/daemon/sync/: announce.py  coordinator.py  peer_handler.py  torrent_mgr.py
daemon/daemon/torrent/: session.py
daemon/daemon/watcher/: fs.py
daemon/proto/: control.proto  registry.proto
daemon/scripts/: peerdup-daemon.service
daemon/tests/: test_config_identity.py  test_integration.py  test_lan_discovery.py  test_policy_handling.py  test_registry_cli.py
docs/: TESTING.md
gnome-extension/: README.md  extension.js  install.sh  metadata.json  stylesheet.css
registry/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.example.toml  entrypoint.sh  pyproject.toml  setup.py  start.sh
registry/proto/: registry.proto
registry/registry/: audit.py  events.py  metrics.py  server.py  ttl.py
registry/registry/auth/: crypto.py
registry/registry/cli/: admin.py
registry/registry/db/: models.py
registry/registry/servicer/: registry.py
registry/scripts/: peerdup-registry.service
registry/tests/: test_admin_cli.py  test_audit.py  test_crypto.py  test_health_rpc.py  test_integration.py  test_metrics.py  test_rate_limiter.py  test_share_policy.py
relay/: .dockerignore  Dockerfile  Makefile  README.md  config.example.toml  entrypoint.sh  pyproject.toml
relay/relay/: config.py  main.py  server.py
